--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <title>Image Fader</title>
+  <link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+  <link rel="stylesheet" href="js/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+  <link rel="stylesheet" href="js/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
 
-  <script src=""></script>
+  <div id="gallery">
+    <a href="http://fillmurray.com/400/401" role="gallery">
+      <img src="http://fillmurray.com/100/101" alt="bill murray">
+    </a>
+    <a href="http://fillmurray.com/400/402" role="gallery">
+      <img src="http://fillmurray.com/100/102" alt="bill murray">
+    </a>
+    <a href="http://fillmurray.com/400/403" role="gallery">
+      <img src="http://fillmurray.com/100/103" alt="bill murray">
+    </a>
+    <a href="http://fillmurray.com/400/404" role="gallery">
+      <img src="http://fillmurray.com/100/104" alt="bill murray">
+    </a>
+    <a href="http://fillmurray.com/400/405" role="gallery">
+      <img src="http://fillmurray.com/100/105" alt="bill murray">
+    </a>
+  </div>
+
+  <!-- jQuery linked first -->
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script type="text/javascript" src="js/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+  <script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+  <script type="text/javascript" src="js/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+  <script type="text/javascript" src="js/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+  <script type="text/javascript" src="js/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+  <!-- my own custom js linked second -->
+  <script src="js/image-fader.js"></script>
 </body>
 </html>
